--- a/P2/app/src/main/res/layout/activity_sub2.xml
+++ b/P2/app/src/main/res/layout/activity_sub2.xml
@@ -1,9 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Sub2Activity">
+    
+<!--    <HorizontalScrollView-->
+<!--        android:id="@+id/container"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent">-->
+<!--        <androidx.appcompat.widget.LinearLayoutCompat-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="match_parent"-->
+<!--            android:orientation="vertical">-->
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+<!--        </androidx.appcompat.widget.LinearLayoutCompat>-->
+
+<!--    </HorizontalScrollView>-->
+
+</androidx.appcompat.widget.LinearLayoutCompat>
